--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
-        "bsobbe/ithenticate": "dev-master"
+        "bsobbe/ithenticate": "dev-master",
+        "phpmailer/phpmailer": "^6.1"
     }
 }
